--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -4,11 +4,12 @@
     "module": "ES2022",
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "dist/client"
 
   },
   "experimental": {
-    "classRegex": ["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+    "classRegex": ["clsx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
   },
   "include": [
     "src",
