--- a/server/tsconfig.node.json
+++ b/server/tsconfig.node.json
@@ -4,7 +4,8 @@
         "module": "Node16",
         "moduleResolution": "node16",
         "jsx": "react-jsx",
-        "noEmit": false
+        "noEmit": false,
+        "outDir": "dist/server"
     },
     "include": ["src/**.ts"]
 }
