--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,19 +9,14 @@
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
-        "module": "NodeNext",
-        "moduleResolution": "nodenext",
+        "module": "ES2020",
+        "moduleResolution": "bundler",
         "resolveJsonModule": true,
         "jsx" : "react-jsx",
         "isolatedModules": true,
-        "noEmit": false,
-        "outDir": "dist/server"
+        "noEmit": true
     },
-    "include": ["server"],
     "exclude": [
         "node_modules"
     ],
-    "experimental": {
-        "classRegex": ["cx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
-    }
 }
