--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
         "resolveJsonModule": true,
         "jsx" : "react-jsx",
         "isolatedModules": true,
-        "noEmit": false,
-        "outDir": "dist/server"
+        "noEmit": true,
+        "outDir": "dist"
     },
-    "include": ["server"],
+    "include": ["server","client"],
     "exclude": [
         "node_modules"
     ]
