--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build-storybook": "npx storybook build -o dist/storybook"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "express": "^4.21.2",
+    "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
