Add PageView component to parse and display HTML files (WIP) Add CreateElementMenu (WIP) Add "html-react-parser" and "vite-tsconfig-paths" to package.json

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,11 +1,12 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "module": "Node16",
+        "module": "NodeNext",
         "moduleResolution": "node16",
+        "target": "ES2022",
         "jsx": "react-jsx",
         "noEmit": false,
         "outDir": "dist/server"
     },
-    "include": ["server/src"]
+    "include": ["server/src"],
 }
