--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "express": "^4.21.2",
+    "html-react-parser": "^5.2.2",
     "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
@@ -60,6 +61,7 @@
     "typescript-eslint": "^8.25.0",
     "vite": "^6.2.0",
     "vite-css-modules": "^1.8.4",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.7"
   },
   "eslintConfig": {
