--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,7 @@
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true
+    "noEmit": true,
   },
   "include": [
     "client/src",
