--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,14 @@
 {
+    "references": [
+    {
+        "path": "./tsconfig.app.json"
+    },
+    {
+        "path": "./tsconfig.node.json"
+    }
+],
     "compilerOptions": {
-        "target": "ESNext",
+//        "target": "ESNext",
         "useDefineForClassFields": true,
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "allowJs": false,
@@ -9,13 +17,19 @@
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
-        "module": "ES2020",
-        "moduleResolution": "bundler",
+        "module": "NodeNext",
+        "moduleResolution": "nodenext",
         "resolveJsonModule": true,
         "jsx" : "react-jsx",
         "isolatedModules": true,
         "noEmit": false,
-        "outDir": "dist/server"
+        "outDir": "dist/server",
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "./client/src/*"
+            ]
+        }
     },
     "include": ["server"],
     "exclude": [
