--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,7 @@
     "jsx": "react-jsx",
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist/client",
+    "types": ["src/global.d.ts", "vite/client"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["client/src/*"],
