--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@blocknote/core": "^0.25.1",
     "@blocknote/react": "^0.25.1",
     "@blocknote/shadcn": "^0.25.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
