Add api.ts to handle /api route Add users.ts to handle /api/users route Refactor index.ts -> gifs.ts to handle /api/gifs route Add errorHandler to api/utils.ts Add getGifs fn to gifs.middleware.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,13 +25,11 @@
         "noEmit": false,
         "outDir": "dist/server",
         "baseUrl": ".",
-        "paths": {
-            "@/*": [
-                "./client/src/*"
-            ]
-        }
+      
     },
-    "include": ["server"],
+    "include": [
+      "server",
+    ],
     "exclude": [
         "node_modules"
     ]
