Revise compose.yaml to include db service Add dbtest.ts to test database in /server Revise .gitignore to ignore .env files Add users.ts routes file to /server Add dotenv, cors, @types/cors, chalk, mysql2 to dependencies Update typescript-eslint, eslint-plugin-storybook, @typescript-eslint/parser Move ts compilerOptions in tsconfig.json to tsconfig.node.json Add fly.toml for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ dist-ssr
 *.local
 storybook-static
 
+
+# .env
+.env*
+.env.*
+
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
