--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon -w server -x tsx server/src/index.ts",
     "preview": "pnpm run build && NODE_ENV=production tsx server/src/index.ts",
-    "build": "vite build && tsc",
+    "build": "vite build && tsc -p tsconfig.node.json",
     "start": "node dist/server/index.js",
     "storybook": "npx storybook dev -p 6006",
     "build-storybook": "npx storybook build"
@@ -17,11 +17,16 @@
     "@blocknote/shadcn": "^0.25.1",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@types/cors": "^2.8.17",
+    "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.10",
+    "mysql2": "^3.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
@@ -46,7 +51,7 @@
     "@types/node": "^20.17.22",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@typescript-eslint/parser": "^8.25.0",
+    "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
@@ -54,7 +59,7 @@
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-storybook": "^0.11.3",
+    "eslint-plugin-storybook": "^0.11.4",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9",
     "playwright": "^1.50.1",
@@ -64,7 +69,7 @@
     "tailwindcss": "^4.0.9",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.25.0",
+    "typescript-eslint": "^8.26.1",
     "vite": "^6.2.0",
     "vitest": "^3.0.7"
   },
@@ -73,7 +78,12 @@
       "plugin:storybook/recommended"
     ]
   },
-  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b",
+  "overrides": {
+    "eslint-plugin-storybook": {
+      "typescript": "$typescript"
+    }
+  },
+  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6",
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
