Add LoginForm,LoginSheet,Login (non-functional, WIP) Add zod validation to user registration Add docker:watch, docker:db, docker:reset scripts to package.json Install dependencies for shadcn/ui components

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,8 +10,7 @@
     "types": ["client/src/global.d.ts", "vite/client"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["client/src/*"],
-      "@/lib/*": ["client/src/lib/*"]
+      "@/*": ["./client/src/*"],
     }
 
   },
@@ -20,6 +19,7 @@
   },
   "include": [
     "client/src",
-    "global.d.ts"
+    "client/src/global.d.ts",
+
   ]
 }
