--- a/components.json
+++ b/components.json
@@ -5,8 +5,8 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "client/src/main.css",
-    "baseColor": "gray",
+    "css": "/client/src/styles/main.css",
+    "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
