--- a/compose.yaml
+++ b/compose.yaml
@@ -8,8 +8,9 @@ services:
     env_file: ".env"
     environment:
       NODE_ENV: production
+      DATABASE_URL: ${DATABASE_URL}
     ports:
-      - 3000:3000
+      - ${HTTP_PORT}
     develop:
         watch:
           - action: rebuild
@@ -23,11 +24,12 @@ services:
     restart: always
     volumes:
       - db-data:/var/lib/mysql
+#    env_file: ".env"
     environment:
       - MYSQL_DATABASE=myapp
       - MYSQL_ROOT_PASSWORD=root
     ports:
-      - 33060:33060
+      [ "3306:3306" ]
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
