--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "dd": "npm run docker:db && npm run dev",
     "dev": "nodemon -w server -x tsx server/src/index.ts",
+    "docker:watch": "docker compose up --watch",
+    "docker:db": "docker compose up -d db",
+    "docker:reset": "docker compose down -v",
     "preview": "pnpm run build && NODE_ENV=production tsx server/src/index.ts",
     "build": "vite build && tsc -p tsconfig.node.json",
     "start": "node dist/server/index.js",
@@ -16,24 +20,33 @@
     "@blocknote/core": "^0.25.1",
     "@blocknote/react": "^0.25.1",
     "@blocknote/shadcn": "^0.25.1",
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@types/cors": "^2.8.17",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-status-codes": "^2.3.0",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.10",
     "mysql2": "^3.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-router": "^7.3.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "vite-express": "^0.20.0"
+    "vite": "^6.2.0",
+    "vite-express": "^0.20.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
@@ -48,6 +61,9 @@
     "@storybook/test": "^8.6.3",
     "@tailwindcss/language-server": "^0.14.8",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.17.22",
     "@types/react": "^18.3.18",
@@ -72,7 +88,6 @@
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.2.0",
     "vitest": "^3.0.7"
   },
   "eslintConfig": {
@@ -88,6 +103,7 @@
   "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6",
   "pnpm": {
     "onlyBuiltDependencies": [
+      "bcrypt",
       "esbuild",
       "msw"
     ]
