--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "docker:watch": "docker compose up --watch",
     "docker:db": "docker compose up -d db",
     "docker:reset": "docker compose down -v",
-    "preview": "pnpm run build && NODE_ENV=production tsx server/src/index.ts",
+    "preview": "npm run build && NODE_ENV=production tsx server/src/index.ts",
     "build": "vite build && tsc -p tsconfig.node.json",
     "start": "node dist/server/index.js",
     "storybook": "npx storybook dev -p 6006",
-    "build-storybook": "npx storybook build",
-    "dbmate": "docker run --rm -it --network=host -v \"$(pwd)/db:/db\" ghcr.io/amacneil/dbmate"
+    "build-storybook": "npx storybook build"
   },
   "dependencies": {
     "@blocknote/core": "^0.25.2",
@@ -74,7 +73,8 @@
     "vaul": "^1.1.2",
     "vite": "^6.2.2",
     "vite-express": "^0.20.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "dbmate": "^2.26.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
@@ -101,7 +101,7 @@
     "@vitest/browser": "^3.0.9",
     "@vitest/coverage-v8": "^3.0.9",
     "classix": "^2.2.2",
-    "dbmate": "^2.26.0",
+
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-react": "^7.37.4",
