--- a/db/fly.toml
+++ b/db/fly.toml
@@ -11,7 +11,7 @@ primary_region = 'yul'
 
 [env]
   MYSQL_DATABASE = 'myapp'
-  MYSQL_USER = 'cruduser'
+  MYSQL_USER = 'root'
 
 [processes]
   app = '--datadir /data/mysql --default-authentication-plugin mysql_native_password'
