--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-table": "^8.21.2",
+    "@types/morgan": "^1.9.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "chalk": "^5.4.1",
@@ -52,12 +53,14 @@
     "cmdk": "^1.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dbmate": "^2.26.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "express": "^4.21.2",
     "http-status-codes": "^2.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
+    "morgan": "^1.10.0",
     "motion": "^12.5.0",
     "mysql2": "^3.13.0",
     "radix-ui": "^1.1.3",
@@ -73,8 +76,7 @@
     "vaul": "^1.1.2",
     "vite": "^6.2.2",
     "vite-express": "^0.20.0",
-    "zod": "^3.24.2",
-    "dbmate": "^2.26.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
@@ -101,7 +103,6 @@
     "@vitest/browser": "^3.0.9",
     "@vitest/coverage-v8": "^3.0.9",
     "classix": "^2.2.2",
-
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-react": "^7.37.4",
@@ -128,7 +129,7 @@
       "typescript": "$typescript"
     }
   },
-  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6",
+  "packageManager": "pnpm@10.6.4+sha512.da3d715bfd22a9a105e6e8088cfc7826699332ded60c423b14ec613a185f1602206702ff0fe4c438cb15c979081ce4cb02568e364b15174503a63c7a8e2a5f6c",
   "pnpm": {
     "onlyBuiltDependencies": [
       "bcrypt",
