--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,8 @@ services:
     env_file: .env
     environment:
       - NODE_ENV=production
-      - MYSQL_HOST
+      - MYSQL_HOST=db
+      - MYSQL_ROOT_PASSWORD
       - MYSQL_USER
       - MYSQL_PASSWORD
       - MYSQL_DATABASE
