--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,7 @@ services:
       - MYSQL_USER
       - MYSQL_PASSWORD
       - MYSQL_DATABASE
+      - DATABASE_URL = "mysql://apiuser:apiuserk@0.0.0.0:3306/myapp
     ports:
       - "3000:3000"
     develop:
@@ -32,6 +33,8 @@ services:
     environment:
       - MYSQL_DATABASE
       - MYSQL_ROOT_PASSWORD
+      - MYSQL_USER
+      - MYSQL_PASSWORD
     ports:
       - "3306:3306"
     healthcheck:
