--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
