--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "express": "^4.21.2",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0",
     "input-otp": "^1.4.2",
@@ -96,6 +97,8 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-mysql-session": "^3.0.6",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^20.17.24",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
