--- a/db/fly.toml
+++ b/db/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for db-billowing-water-5369 on 2025-03-19T01:35:29-02:30
+# fly.toml app configuration file generated for db-billowing-water-5369 on 2025-03-20T00:37:18-02:30
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -9,21 +9,18 @@ primary_region = 'yul'
 [build]
   image = 'mysql:8.0'
 
+[env]
+  MYSQL_DATABASE = 'myapp'
+  MYSQL_USER = 'root'
+
+[processes]
+  app = '--datadir /data/mysql --default-authentication-plugin mysql_native_password'
+
+[[mounts]]
+  source = 'mysqldata'
+  destination = '/data'
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-
-# The [processes] section is different for 8+, 8.4, and 5.7. Use the one that matches your version.
-# Use the following for versions 8 to 8.3:
-[processes]
-app = """--datadir /data/mysql \
-    --default-authentication-plugin mysql_native_password"""
-
-[mounts]
-source = "mysqldata"
-destination = "/data"
-
-[env]
-MYSQL_DATABASE = "myapp"
-MYSQL_USER = "apiuser"
