Change /api/register and /api/login to /register and /login endpoints (POSTS handled by express, GET handled by React/Vite) Refactor to move middleware init/config from /server/index.ts to addMiddleware.ts Consolidated separate utils.ts into one file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     }
 ],
     "compilerOptions": {
-//        "target": "ESNext",
+//
         "useDefineForClassFields": true,
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "allowJs": false,
@@ -17,8 +17,8 @@
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "forceConsistentCasingInFileNames": true,
-        "module": "NodeNext",
-        "moduleResolution": "bundler",
+//        "module": "NodeNext",
+//        "moduleResolution": "bundler",
         "resolveJsonModule": true,
         "jsx" : "react-jsx",
         "isolatedModules": true,
