Fix for refreshToken and login logic Install axios, jwt-decode, react-hook-form in react-client package.json

--- a/packages/rest-api/package.json
+++ b/packages/rest-api/package.json
@@ -33,7 +33,9 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.11",
     "esbuild": "0.25.1",
+    "nodemon": "^3.1.9",
     "prettier": "3.5.3",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
