--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "npm --prefix client dev"
-  }
+    "dev": "concurrently \"npm run dev --workspace=@crudvale/rest-api\" \"npm run dev --workspace=@crudvale/react-client\"",
+    "build": "npm run build --workspaces",
+    "build:rest-api": "npm run build --workspace=@crudvale/rest-api",
+    "build:react-client": "npm run build --workspace=@crudvale/react-client"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  },
+  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af"
 }
