Add BaseRepository, UsersRepository, and CollectionsRepository to handle MySQL operations Add collections.controller.ts to handle collections operations Upgrade express 4 -> 5 (for better async error handling)

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -116,5 +116,5 @@
     "skipLibCheck": true
     /* Skip type checking all .d.ts files. */
   },
-  "include": ["./**/*.ts", "./**/*.tsx"]
+  "include": ["./**/*.ts", "./**/*.tsx","../types.d.ts"]
 }
