--- a/db/fly.toml
+++ b/db/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for db-silent-surf-164 on 2025-04-01T17:26:53-02:30
+# fly.toml app configuration file generated for db-silent-surf-164 on 2025-04-02T17:16:11-02:30
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -9,20 +9,18 @@ primary_region = 'yul'
 [build]
   image = 'mysql:8.0'
 
+[env]
+  MYSQL_DATABASE = 'myapp'
+  MYSQL_USER = 'apiuser'
+
+[processes]
+  app = '--datadir /data/mysql --default-authentication-plugin mysql_native_password'
+
+[[mounts]]
+  source = 'mysqldata'
+  destination = '/data'
 
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-
-[processes]
-app = """--datadir /data/mysql \
-    --default-authentication-plugin mysql_native_password"""
-
-[mounts]
-source = "mysqldata"
-destination = "/data"
-
-[env]
-MYSQL_DATABASE = "myapp"
-MYSQL_USER = "apiuser"
