--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-table": "^8.21.2",
+    "animal-avatar-generator": "^1.2.0",
     "axios": "^1.8.4",
     "bcrypt-ts": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -56,6 +57,8 @@
     "motion": "^12.5.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
+    "node-emoji": "^2.2.0",
+    "pluralize": "^8.0.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.3",
     "react-dom": "^19.0.0",
@@ -74,15 +77,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@faker-js/faker": "^9.6.0",
     "@tailwindcss/vite": "^4.0.15",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.16",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "dbmate": "^2.26.0",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -91,6 +97,7 @@
     "nodemon": "^3.0.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
+    "umzug": "^3.8.2",
     "vite": "^6.2.0"
   },
   "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
