Add various user/collection views Add getColumns method to BaseRepository class in /server Edit config for vite/tsconfig to fix MIME-type errors Consolidated some type+schema definitions

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
+    "module": "ES2020",
+    "moduleResolution": "bundler",
     "jsx": "react-jsx",
     "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
