--- a/package.json
+++ b/package.json
@@ -54,18 +54,21 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.483.0",
+    "mnemonic-id": "^3.2.7",
     "motion": "^12.5.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
     "node-emoji": "^2.2.0",
     "pluralize": "^8.0.0",
+    "random-word-slugs": "^0.1.7",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
-    "react-router": "^7.4.0",
+    "react-router": "^7.5.0",
+    "react-svg": "^16.3.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "tailwindcss-animate": "^1.0.7",
