Add migration for user table for unique email and username Add logging to seed.ts script to generate csv file for user data

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "vite-express": "*",
+    "weighted": "^1.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
