--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@blocknote/core": "^0.26.0",
     "@blocknote/react": "^0.26.0",
     "@blocknote/shadcn": "^0.26.0",
+    "@faker-js/faker": "^9.6.0",
     "@hookform/resolvers": "^4.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -42,6 +43,7 @@
     "animal-avatar-generator": "^1.2.0",
     "axios": "^1.8.4",
     "bcrypt-ts": "^6.0.0",
+    "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -50,7 +52,6 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "express": "^5.1.0",
-    "@faker-js/faker": "^9.6.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -82,7 +83,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-
     "@tailwindcss/vite": "^4.0.15",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
