--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "pluralize": "^8.0.0",
     "random-word-slugs": "^0.1.7",
     "react": "^19.0.0",
+    "react-camera-pro": "^1.4.0",
     "react-day-picker": "^9.6.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -79,7 +80,7 @@
     "vaul": "^1.1.2",
     "vite-express": "*",
     "weighted": "^1.0.0",
-    "zod": "^3.24.2"
+    "zod": "4.0.0-beta.20250412T085909"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -105,5 +106,5 @@
     "umzug": "^3.8.2",
     "vite": "^6.2.0"
   },
-  "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
+  "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
