--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "^5.74.0",
     "@tanstack/react-table": "^8.21.2",
     "animal-avatar-generator": "^1.2.0",
     "axios": "^1.8.4",
@@ -55,6 +56,7 @@
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "mnemonic-id": "^3.2.7",
     "motion": "^12.5.0",
@@ -88,6 +90,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.16",
     "@types/pluralize": "^0.0.33",
     "@types/react": "^19.0.10",
