--- a/package.json
+++ b/package.json
@@ -97,9 +97,11 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
     "dbmate": "^2.26.0",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
