--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "9",
     "@tanstack/react-query": "^5.74.0",
     "@tanstack/react-table": "^8.21.2",
     "animal-avatar-generator": "^1.2.0",
@@ -56,6 +58,7 @@
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leva": "^0.10.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "mnemonic-id": "^3.2.7",
@@ -77,6 +80,8 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.175.0",
+    "three-stdlib": "^2.35.15",
     "tsx": "^4.3.0",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
@@ -95,6 +100,7 @@
     "@types/pluralize": "^0.0.33",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/three": "^0.175.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
