--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
     "@gradio/client": "^1.14.2",
     "@hookform/resolvers": "^4.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-collapsible": "^1.1.3",
-    "@radix-ui/react-context-menu": "^2.2.6",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-hover-card": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-menubar": "^1.1.6",
-    "@radix-ui/react-navigation-menu": "^1.2.5",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-scroll-area": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slider": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-collapsible": "^1.1.10",
+    "@radix-ui/react-context-menu": "^2.2.14",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-hover-card": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-menubar": "^1.1.14",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.3.6",
+    "@radix-ui/react-scroll-area": "^1.2.8",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slider": "^1.3.4",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "9",
     "@tanstack/react-query": "^5.74.0",
@@ -65,29 +65,31 @@
     "jwt-decode": "^4.0.0",
     "leva": "^0.10.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.483.0",
+    "lucide-react": "^0.509.0",
     "mnemonic-id": "^3.2.7",
     "motion": "^12.6.5",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
+    "next-themes": "^0.4.6",
     "node-emoji": "^2.2.0",
     "pluralize": "^8.0.0",
     "random-word-slugs": "^0.1.7",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-camera-pro": "^1.4.0",
     "react-day-picker": "^9.6.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-router": "^7.5.0",
     "react-svg": "^16.3.0",
-    "tailwind-merge": "^3.0.2",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.15",
-    "tailwindcss-animate": "^1.0.7",
     "three": "^0.175.0",
     "three-stdlib": "^2.35.15",
     "tsx": "^4.3.0",
+    "tw-animate-css": "^1.2.9",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "vite-express": "*",
