Add reverse geocoding support with improved geolocation handling
Added localStorage support to store geolocation data

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@react-three/fiber": "9",
     "@tanstack/react-query": "^5.74.0",
     "@tanstack/react-table": "^8.21.2",
+    "@uidotdev/usehooks": "^2.4.1",
     "animal-avatar-generator": "^1.2.0",
     "axios": "^1.8.4",
     "bcrypt-ts": "^6.0.0",
@@ -128,5 +129,5 @@
     "umzug": "^3.8.2",
     "vite": "^6.2.0"
   },
-  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
