Add rate limiting middleware to services API routes

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "genkit": "^1.7.0",
     "image-blob-reduce": "^4.1.0",
     "input-otp": "^1.4.2",
