--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for wildernest on 2025-04-01T14:34:49-02:30
+# fly.toml app configuration file generated for wildernest on 2025-05-21T13:42:30-02:30
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'wildernest'
-primary_region = 'yul'
+primary_region = 'yyz'
 
 [build]
 
