--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.18",
     "@blocknote/core": "^0.26.0",
     "@blocknote/react": "^0.26.0",
     "@blocknote/shadcn": "^0.26.0",
@@ -46,6 +47,7 @@
     "@tanstack/react-query": "^5.74.0",
     "@tanstack/react-table": "^8.21.2",
     "@uidotdev/usehooks": "^2.4.1",
+    "ai": "^4.3.16",
     "animal-avatar-generator": "^1.2.0",
     "axios": "^1.8.4",
     "bcrypt-ts": "^6.0.0",
@@ -95,7 +97,7 @@
     "vaul": "^1.1.2",
     "vite-express": "*",
     "weighted": "^1.0.0",
-    "zod": "4.0.0-beta.20250412T085909"
+    "zod": "3.25.39"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
