Fix for public quests not displaying

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -117,7 +117,7 @@
         "skipLibCheck": true,
         /* Skip type checking all .d.ts files. */
         "paths": {
-            "@/shared/*": ["../shared/*"]
+            "@shared/*": ["../shared/*"]
         }
     },
     "include": ["./**/*.ts", "./**/*.tsx"]
