Fix lint scripts in package.json

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "version": "0.0.1",
     "type": "module",
   "scripts": {
-    "lint-server": "npx biome lint --write src/server",
-    "lint-client": "npx biome lint --write src/client",
-    "lint": "pnpm run lint-server && pnpm run lint-client",
+    "lint:server": "biome lint --write src/server",
+    "lint:client": "biome lint --write src/client",
+    "lint": "pnpm run lint:server && pnpm run lint:client",
 
     "dev": "NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts",
     "start:preview": "NODE_ENV=production tsx src/server/server.ts",
