Fix for Typescript errors in test scripts

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -120,5 +120,6 @@
             "@shared/*": ["../shared/*"]
         }
     },
-    "include": ["./**/*.ts", "./**/*.tsx", "../shared/**/*.ts"]
+    "include": ["./**/*.ts", "./**/*.tsx", "../shared/**/*.ts"],
+    "exclude": ["./**/__tests__/**/*", "./**/*.test.ts", "./**/*.spec.ts"]
 }
