--- a/biome.json
+++ b/biome.json
@@ -128,6 +128,33 @@
   "overrides": [
     {
       "includes": [
+        "**/__tests__/**/*",
+        "**/*.test.*",
+        "**/*.spec.*"
+      ],
+      "javascript": {
+        "globals": [
+          "describe",
+          "it",
+          "test",
+          "expect",
+          "beforeEach",
+          "afterEach",
+          "beforeAll",
+          "afterAll",
+          "jest"
+        ]
+      },
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noExplicitAny": "off"
+          }
+        }
+      }
+    },
+    {
+      "includes": [
         "**/*.ts",
         "**/*.tsx",
         "**/*.mts",
