Update express-rate-limit and express-slow-down packages

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,9 @@
 onlyBuiltDependencies:
+  - '@firebase/util'
   - '@swc/core'
   - '@tailwindcss/oxide'
   - bufferutil
   - esbuild
   - msw
   - protobufjs
+  - unrs-resolver
