Fixes for typescript errors in various files (various files)

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "lint:server": "biome lint --write src/server",
         "lint:client": "biome lint --write src/client",
         "lint": "pnpm run lint:server && pnpm run lint:client",
+        "typecheck:client": "tsc --noEmit -p src/client/tsconfig.json",
+        "typecheck:server": "tsc --noEmit -p src/server/tsconfig.json",
+        "typecheck": "pnpm run typecheck:client && pnpm run typecheck:server",
         "dev": "NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts --",
         "start:preview": "NODE_ENV=production tsx src/server/server.ts",
         "start": "NODE_ENV=production node dist/server/server.js",
@@ -98,7 +101,6 @@
         "lucide-react": "^0.509.0",
         "mnemonic-id": "^3.2.7",
         "motion": "^12.23.12",
-        "mysql": "^2.18.1",
         "mysql2": "^3.14.3",
         "next-themes": "^0.4.6",
         "node-cache": "^5.1.2",
@@ -152,7 +154,6 @@
         "@types/leaflet": "^1.9.20",
         "@types/lodash": "^4.17.20",
         "@types/node": "^22.17.2",
-        "@types/node-cache": "^4.2.5",
         "@types/pluralize": "^0.0.33",
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
