--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,12 +1,20 @@
 {
-    "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "target": "ESNext",
+        "useDefineForClassFields": true,
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
+        "allowJs": false,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
         "module": "ES2020",
         "moduleResolution": "bundler",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
         "jsx": "react-jsx",
-        "esModuleInterop": true,
-        "strict": true,
-        "skipLibCheck": true,
         "emitDeclarationOnly": false,
         "declaration": true,
         "baseUrl": ".",
@@ -14,5 +22,7 @@
             "@shared/*": ["../shared/*"],
             "@/*": ["./*"]
         }
-    }
+    },
+    "include": ["./**/*.ts", "./**/*.tsx", "../shared/**/*.ts"],
+    "exclude": ["./**/__tests__/**/*", "./**/*.test.ts", "./**/*.spec.ts"]
 }
